Integracion eventos kafka, validacion de endpoints