@@ -1,8 +1,11 @@
 package com.banco.gestionclientes.api.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -13,10 +16,13 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.banco.gestionclientes.api.dto.ClienteDTO;
+import com.banco.gestionclientes.api.mapper.ClienteMapper;
+import com.banco.gestionclientes.api.response.ApiResponse;
+import com.banco.gestionclientes.api.validation.ValidationGroups.OnCreate;
+import com.banco.gestionclientes.api.validation.ValidationGroups.OnUpdate;
 import com.banco.gestionclientes.domain.model.Cliente;
 import com.banco.gestionclientes.domain.service.ClienteService;
 
-import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 
 @RestController
@@ -27,61 +33,48 @@ public class ClienteController {
 	private final ClienteService clienteService;
 
 	@PostMapping
-	public ResponseEntity<ClienteDTO> guardar(@Valid @RequestBody ClienteDTO dto) { 
-		Cliente cliente = toEntity(dto);
+	public ResponseEntity<ApiResponse<ClienteDTO>> guardar(@Validated(OnCreate.class) @RequestBody ClienteDTO dto) {
+		Cliente cliente = ClienteMapper.toEntity(dto);
 		Cliente saved = clienteService.guardar(cliente);
-		return ResponseEntity.ok(toDTO(saved));
+		ClienteDTO response = ClienteMapper.toDTO(saved);
+
+		return ResponseEntity.status(HttpStatus.CREATED).body(ApiResponse.ok(response, "Cliente creado correctamente"));
 	}
 
 	@PutMapping("/{id}")
-	public ResponseEntity<ClienteDTO> actualizar(@PathVariable Long id, @Valid @RequestBody ClienteDTO dto) { 
-		Cliente actualizado = clienteService.actualizar(id, toEntity(dto));
-		return ResponseEntity.ok(toDTO(actualizado));
+	public ResponseEntity<ApiResponse<ClienteDTO>> actualizar(@PathVariable Long id,
+			@Validated(OnUpdate.class) @RequestBody ClienteDTO dto) {
+		Cliente actualizado = clienteService.actualizar(id, ClienteMapper.toEntity(dto));
+		ClienteDTO response = ClienteMapper.toDTO(actualizado);
+
+		return ResponseEntity.ok(ApiResponse.ok(response, "Cliente actualizado correctamente"));
 	}
 
 	@GetMapping
-	public ResponseEntity<List<ClienteDTO>> listar() {
-		List<ClienteDTO> lista = clienteService.listar().stream().map(this::toDTO).toList();
-		return ResponseEntity.ok(lista);
+	public ResponseEntity<ApiResponse<List<ClienteDTO>>> listar() {
+		List<ClienteDTO> lista = clienteService.listar().stream().map(ClienteMapper::toDTO)
+				.collect(Collectors.toList());
+
+		return ResponseEntity.ok(ApiResponse.ok(lista, "Listado de clientes obtenido correctamente"));
 	}
 
 	@GetMapping("/{id}")
-	public ResponseEntity<ClienteDTO> obtenerPorId(@PathVariable Long id) {
-		return clienteService.buscarPorId(id).map(cliente -> ResponseEntity.ok(toDTO(cliente)))
+	public ResponseEntity<ApiResponse<ClienteDTO>> obtenerPorId(@PathVariable Long id) {
+		Cliente cliente = clienteService.buscarPorIdOrThrow(id);
+		ClienteDTO dto = ClienteMapper.toDTO(cliente);
+		return ResponseEntity.ok(ApiResponse.ok(dto, "Cliente obtenido correctamente"));
+	}
+
+	@GetMapping("/codigo/{clienteId}")
+	public ResponseEntity<ClienteDTO> obtenerPorClienteId(@PathVariable String clienteId) {
+		return clienteService.buscarPorClienteId(clienteId)
+				.map(cliente -> ResponseEntity.ok(ClienteMapper.toDTO(cliente)))
 				.orElse(ResponseEntity.notFound().build());
 	}
 
 	@DeleteMapping("/{id}")
-	public ResponseEntity<Void> eliminar(@PathVariable Long id) {
+	public ResponseEntity<ApiResponse<Void>> eliminar(@PathVariable Long id) {
 		clienteService.eliminar(id);
-		return ResponseEntity.noContent().build();
-	}
-
-	private Cliente toEntity(ClienteDTO dto) {
-		Cliente cliente = new Cliente();
-		cliente.setNombre(dto.getNombre());
-		cliente.setGenero(dto.getGenero());
-		cliente.setEdad(dto.getEdad());
-		cliente.setIdentificacion(dto.getIdentificacion());
-		cliente.setDireccion(dto.getDireccion());
-		cliente.setTelefono(dto.getTelefono());
-		cliente.setClienteId(dto.getClienteId());
-		cliente.setContrasena(dto.getContrasena());
-		cliente.setEstado(dto.getEstado());
-		return cliente;
-	}
-
-	private ClienteDTO toDTO(Cliente cliente) {
-		ClienteDTO dto = new ClienteDTO();
-		dto.setId(cliente.getId());
-		dto.setNombre(cliente.getNombre());
-		dto.setGenero(cliente.getGenero());
-		dto.setEdad(cliente.getEdad());
-		dto.setIdentificacion(cliente.getIdentificacion());
-		dto.setDireccion(cliente.getDireccion());
-		dto.setTelefono(cliente.getTelefono());
-		dto.setClienteId(cliente.getClienteId());
-		dto.setEstado(cliente.isEstado());
-		return dto;
+		return ResponseEntity.ok(ApiResponse.ok(null, "Cliente eliminado correctamente"));
 	}
 }
